Added active class generator to nav

--- a/_style-guide/assets/sass/style-guide.scss
+++ b/_style-guide/assets/sass/style-guide.scss
@@ -37,6 +37,7 @@ $nav-width: 6.8rem;
 
 .sg-main-nav__logo {
 	color: $pri;
+	display: block;
 	font-size: 3.2rem;
 	padding: 1.7rem 1rem;
 	text-align: center;
