--- a/_style-guide/assets/css/style-guide.css
+++ b/_style-guide/assets/css/style-guide.css
@@ -36,6 +36,7 @@ Boilerplate version: 1.0
 
 .sg-main-nav__logo {
   color: #57b275;
+  display: block;
   font-size: 3.2rem;
   padding: 1.7rem 1rem;
   text-align: center;
