--- a/assets/sass/base/forms.scss
+++ b/assets/sass/base/forms.scss
@@ -9,7 +9,7 @@
 .textarea {
 	background: none;
 	border: none;
-	border-bottom: $border-width solid $border-colour;
+	border-bottom: $border-width solid #dad5cd;
 	padding: 1rem 1.5rem;
 	resize: none;
 	text-indent: 1px;
@@ -105,7 +105,7 @@
 .input--checkbox {
 	-webkit-appearance: none;
 	-moz-appearance: none;
-	background: $grey-1;
+	background: #dad5cd;
 	border-radius: $border-radius;
 	color: $white;
 	cursor: pointer;
