Refactored most of the base SCSS

--- a/_style-guide/assets/css/style-guide.css
+++ b/_style-guide/assets/css/style-guide.css
@@ -11,6 +11,36 @@ Authors: Rob & Kev Simpson
 Boilerplate version: 1.0
 
 =========================================================== */
+/* ===========================================================
+
+	#COLOURS
+
+=========================================================== */
+/* ===========================================================
+
+	#TYPOGRAPHY
+
+=========================================================== */
+/* ===========================================================
+
+	#BASE VALUES
+
+=========================================================== */
+/* ===========================================================
+
+	#MEDIA QUERIES
+
+=========================================================== */
+/* ===========================================================
+
+	#GRID
+
+=========================================================== */
+/* ===========================================================
+
+	#UTILS
+
+=========================================================== */
 .clearfix:before, .clearfix:after {
   content: "";
   display: table;
@@ -19,6 +49,11 @@ Boilerplate version: 1.0
   clear: both;
 }
 
+/* ===========================================================
+
+	#MEDIA QUERIES
+
+=========================================================== */
 .sg-page-wrap {
   margin-left: 6.8rem;
   position: relative;
