--- a/assets/sass/modules/author.scss
+++ b/assets/sass/modules/author.scss
@@ -5,7 +5,7 @@
 // ===========================================================
 
 .article__footer {
-	background: $grey-1;
+	background: $grey--1;
 }
 .article__footer__figure {
 	float: left;
