--- a/assets/sass/base/forms.scss
+++ b/assets/sass/base/forms.scss
@@ -1,91 +1,69 @@
-// ===========================================================
-//
-//	$FORMS
-//
-// ===========================================================
+/* ===========================================================
+
+	#FORMS
+
+=========================================================== */
 
 .input,
 .select,
 .textarea {
 	background: none;
-	border: none;
-	border-bottom: $border-width solid #dad5cd;
-	padding: 1rem 1.5rem;
-	resize: none;
-	text-indent: 1px;
-	text-overflow: '';
-	transition: border $transition-speed ease;
+	border: $border-width solid $border-colour;
+	border-radius: $border-radius;
 	margin: 0;
+	padding: 1rem 1.5rem;
+	transition: border $transition-speed ease;
 	width: 100%;
-	-webkit-appearance: none;
-	-moz-appearance: none;
 
 	&:focus {
 		border-color: $pri;
 	}
-	&:disabled,
-	&:disabled:hover {
-		background: $border-colour;
-		cursor: auto;
-	}
 }
 
-// ===========================================================
-//
-//	$LABEL
-//
-// ===========================================================
+
+
+/* ===========================================================
+
+	#LABEL
+
+=========================================================== */
 
 .label {
 	display: block;
-	padding-top: $base-line-height;
-	padding-bottom: $base-line-height / 2;
+	padding-top: $line-height;
+	padding-bottom: $line-height / 2;
 
 	&:first-child {
 		padding-top: 0;
 	}
 }
 
-// ===========================================================
-//
-//	$INPUT
-//
-// ===========================================================
-
-.input + .input {
-	margin-top: $base-line-height / 2;
+.label[for] {
+	cursor: pointer;
 }
 
-@include respond-min( $mq-medium ) {
 
-	.input + .input {
-		margin-top: 0;
-	}
 
-	.input--half {
-		@include column(6);
-	}
+/* ===========================================================
 
-}
+	#SELECT
 
-// ===========================================================
-//
-//	$SELECT
-//
-// ===========================================================
+=========================================================== */
 
-.select {
-	background: none;
-	z-index: 1;
-
-	&:disabled {
-		z-index: 0;
-	}
-}
-.select,
 .select-wrap {
 	position: relative;
 }
+
+.select {
+	background: none;
+	position: relative;
+	text-indent: 1px;
+	text-overflow: '';
+	z-index: 1;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+}
+
 .select-wrap:after {
 	color: $border-colour;
 	content: '\25BE';
@@ -95,31 +73,43 @@
 	top: 0;
 }
 
-// ===========================================================
-//
-//	$RADIO & CHECKBOX
-//
-// ===========================================================
 
-.input--radio,
-.input--checkbox {
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	background: #dad5cd;
-	border-radius: $border-radius;
+
+/* ===========================================================
+
+	#TEXTAREA
+
+=========================================================== */
+
+.textarea {
+	resize: none;
+}
+
+
+
+/* ===========================================================
+
+	#RADIO & CHECKBOX
+
+=========================================================== */
+
+.radio,
+.checkbox {
+	background: $border-colour;
 	color: $white;
 	cursor: pointer;
 	font-family: 'geckotree_icon_font';
 	line-height: 1;
 	padding: .8rem 1.4rem 1.6rem 1.5rem;
 	transition: background $transition-speed, border $transition-speed;
+	-webkit-appearance: none;
+	-moz-appearance: none;
 
 	&:before {
 		content: '\2421';
 	}
 
-	&:hover,
-	&:focus {
+	&:hover {
 		background: $sec;
 	}
 
@@ -131,26 +121,32 @@
 		}
 	}
 }
-.input--radio + .label,
-.input--checkbox + .label {
-	display: inline-block;
+
+.radio {
+	border-radius: 50%;
 }
 
-// ===========================================================
-//
-//	$PLACEHOLDER
-//
-// ===========================================================
+.checkbox {
+	border-radius: $border-radius;
+}
+
+
+
+/* ===========================================================
+
+	#PLACEHOLDER
+
+=========================================================== */
 
 ::-webkit-input-placeholder {
-   color: $grey-1;
+   color: $grey--1;
 }
-:-moz-placeholder { /* Firefox 18- */
-   color: $grey-1;  
+:-moz-placeholder { // Firefox 18-
+   color: $grey--1;  
 }
-::-moz-placeholder {  /* Firefox 19+ */
-   color: $grey-1;  
+::-moz-placeholder {  // Firefox 19+
+   color: $grey--1;  
 }
 :-ms-input-placeholder {  
-   color: $grey-1;  
+   color: $grey--1;  
 }
