--- a/assets/sass/modules/article.scss
+++ b/assets/sass/modules/article.scss
@@ -8,11 +8,11 @@
 	text-align: center;
 }
 .article__list--meta {
-	margin-bottom: $base-line-height * 2;
+	margin-bottom: $line-height * 2;
 }
 .article__item--meta {
 	display: inline-block;
-	padding-right: $base-line-height;
+	padding-right: $line-height;
 
 	&:last-child {
 		padding-right: 0;
