--- a/assets/sass/modules/footer.scss
+++ b/assets/sass/modules/footer.scss
@@ -5,7 +5,7 @@
 // ===========================================================
 
 .page-footer {
-	background: $dark-1;
+	background: $dark--1;
 	color: $white;
 	padding: 6rem 0;
 }
