--- a/assets/sass/modules/news.scss
+++ b/assets/sass/modules/news.scss
@@ -6,7 +6,7 @@
 
 .news__item--meta {
 	display: inline-block;
-	padding-right: $base-line-height;
+	padding-right: $line-height;
 
 	&:last-child {
 		padding-right: 0;
