Created mixin to add custom styling to IE stylesheet

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -51,6 +51,7 @@ Version: 1.0
 @import "tools/utils.scss";
 @import "tools/responsive.scss";
 @import "tools/reset.scss";
+@import "tools/helpers.scss";
 
 @import "typography/base.scss";
 @import "typography/headings.scss";
@@ -70,8 +71,7 @@ Version: 1.0
 @import "base/forms.scss";
 @import "base/tables.scss";
 
-//@import "modules/header.scss";
-//@import "modules/nav.scss";
+@import "modules/nav.scss";
 //@import "modules/nav-push.scss";
 //@import "modules/footer.scss";
 //@import "modules/article.scss";
