--- a/assets/css/dev/style.css
+++ b/assets/css/dev/style.css
@@ -76,14 +76,6 @@ Version: 1.0
 	#UTILS
 
 =========================================================== */
-.clearfix:before, .clearfix:after {
-  content: "";
-  display: table;
-}
-.clearfix:after {
-  clear: both;
-}
-
 /* ===========================================================
 
 	#MEDIA QUERIES
@@ -131,6 +123,26 @@ button {
   background: none;
   border: none;
   cursor: pointer;
+}
+
+/* ===========================================================
+
+	#HELPERS
+
+=========================================================== */
+.clearfix:before, .clearfix:after {
+  content: "";
+  display: table;
+}
+.clearfix:after {
+  clear: both;
+}
+
+.hide-text {
+  left: -100%;
+  overflow: hidden;
+  position: absolute;
+  top: -100%;
 }
 
 /* ===========================================================
@@ -476,10 +488,6 @@ body:after {
   -webkit-transition: background 0.3s ease, border 0.3s ease, color 0.3s ease;
   transition: background 0.3s ease, border 0.3s ease, color 0.3s ease;
 }
-.button:hover, .button:focus {
-  background: #f05d71;
-  color: white;
-}
 
 .button--large {
   padding: 2rem 3rem;
@@ -489,9 +497,17 @@ body:after {
   background: #57b275;
   color: white;
 }
+.button--primary:hover, .button--primary:focus {
+  background: #f05d71;
+  color: white;
+}
 
 .button--secondary {
   background: #f2d044;
+  color: white;
+}
+.button--secondary:hover, .button--secondary:focus {
+  background: #f05d71;
   color: white;
 }
 
@@ -529,8 +545,8 @@ img {
   font-family: 'geckotree_icon_font';
   font-style: normal;
   font-weight: normal;
-  src: url("../../fonts/geckotree_icon_font.eot");
-  src: url("../../fonts/geckotree_icon_font.eot?#iefix") format("embedded-opentype"), url("../../fonts/geckotree_icon_font.ttf") format("truetype"), url("../../fonts/geckotree_icon_font.woff") format("woff"), url("../../fonts/geckotree_icon_font.svg#geckotree_icon_font") format("svg");
+  src: url("../../fonts/icons/geckotree_icon_font.eot");
+  src: url("../../fonts/icons/geckotree_icon_font.eot?#iefix") format("embedded-opentype"), url("../../fonts/icons/geckotree_icon_font.ttf") format("truetype"), url("../../fonts/icons/geckotree_icon_font.woff") format("woff"), url("../../fonts/icons/geckotree_icon_font.svg#geckotree_icon_font") format("svg");
 }
 [class^="icon--"],
 [class*=" icon--"] {
@@ -847,6 +863,293 @@ th {
   font-weight: 600;
 }
 
+/* ===========================================================
+
+	#NAV
+
+=========================================================== */
+.page-header {
+  background: #2d2d2d;
+  position: relative;
+  text-align: center;
+}
+
+.page-header__inner {
+  margin: 0 auto;
+  max-width: 180rem;
+}
+
+.page-header__logo {
+  display: inline-block;
+  line-height: 1;
+  padding: 1.4rem 2rem;
+}
+.page-header__logo:hover {
+  color: #4ca769;
+}
+.page-header__logo .icon--logo {
+  font-size: 4rem;
+}
+
+.page-header__toggle {
+  color: white;
+  padding: 2.3rem 2rem;
+  line-height: 1;
+  position: absolute;
+  top: 0;
+  width: 40%;
+}
+.page-header__toggle--search {
+  left: 0;
+  text-align: left;
+}
+.page-header__toggle--menu {
+  right: 0;
+  text-align: right;
+}
+
+.main-nav--detached {
+  display: none;
+}
+
+.main-nav__link {
+  color: white;
+  display: block;
+  padding: 1rem 2rem;
+  text-align: left;
+  -webkit-transition: background 0.3s, color 0.3s;
+  transition: background 0.3s, color 0.3s;
+}
+.main-nav__link:hover, .main-nav__link:focus {
+  background: #242424;
+}
+.main-nav__link.active {
+  color: #f2d044;
+}
+.main-nav__link--cta:hover, .main-nav__link--cta:focus {
+  background: #f05d71;
+}
+.main-nav__link [class^="icon-"] {
+  float: right;
+}
+
+@media only screen and (max-width: 49.99em) {
+  .js .page-header {
+    position: relative;
+    z-index: 10;
+  }
+  .js .page-header__inner {
+    background: #2d2d2d;
+  }
+  .js .main-nav {
+    -webkit-animation-duration: 0.3s;
+    animation-duration: 0.3s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-name: bounceOutUp;
+    animation-name: bounceOutUp;
+    background: #2d2d2d;
+    padding-top: 2rem;
+    position: absolute;
+    -webkit-transform: translateY(-webkit-calc(-168%));
+    transform: translateY(calc(-168%));
+    width: 100%;
+    z-index: -1;
+  }
+  .js.menu--open .main-nav {
+    -webkit-animation-name: bounceInDown;
+    animation-name: bounceInDown;
+  }
+}
+@-webkit-keyframes bounceInDown {
+  0% {
+    -webkit-transform: translateY(-webkit-calc(-100% - 68px));
+  }
+
+  60% {
+    -webkit-transform: translateY(0px);
+  }
+
+  100% {
+    -webkit-transform: translateY(-20px);
+  }
+}
+@keyframes bounceInDown {
+  0% {
+    -webkit-transform: translateY(-webkit-calc(-100% - 68px));
+    transform: translateY(calc(-100% - 68px));
+  }
+
+  60% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+
+  100% {
+    -webkit-transform: translateY(-20px);
+    transform: translateY(-20px);
+  }
+}
+@-webkit-keyframes bounceOutUp {
+  0% {
+    -webkit-transform: translateY(-20px);
+  }
+
+  30% {
+    -webkit-transform: translateY(0px);
+  }
+
+  100% {
+    -webkit-transform: translateY(-webkit-calc(-100% - 68px));
+  }
+}
+@keyframes bounceOutUp {
+  0% {
+    -webkit-transform: translateY(-20px);
+    transform: translateY(-20px);
+  }
+
+  60% {
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+  }
+
+  100% {
+    -webkit-transform: translateY(-webkit-calc(-100% - 68px));
+    transform: translateY(calc(-100% - 68px));
+  }
+}
+/*
+.page-header .logo {
+	float: left;
+	margin: 1rem;
+}
+
+.nav--main .nav__list {
+	padding: 1rem 0;
+}
+.nav--main .nav__link {
+	color: $white;
+	display: block;
+	padding: 1rem 0;
+
+	&:hover,
+	&:focus {
+		color: $sec;
+	}
+}
+
+
+//= NO JS ================================================
+
+.no-js {
+
+	.toggle--nav--main {
+		display: none;
+	}
+
+}
+
+//= JS ===================================================
+
+.js {
+
+	.page-header {
+		transition: transform $transition-speed ease;
+		width: 100%;
+	}
+	.page-header__inner {
+		padding-bottom: 1rem;
+		z-index: 1;
+	}
+
+	.toggle--nav--main {
+		float: right;
+	}
+
+	.nav--main {
+		background: $dark-1;
+		left: 0;
+		opacity: 0;
+		position: absolute;
+		transform: translateY( -2rem );
+		transition: transform $transition-speed ease, opacity $transition-speed ease, visibility $transition-speed ease;
+		visibility: hidden;
+		width: 100%;
+	}
+
+	&.nav--main--open .nav--main {
+		opacity: 1;
+		transform: translateY(0);
+		visibility: visible;
+	}
+
+	.nav--main .nav__link {
+		padding: 1rem 2rem;
+	}
+
+	//= DETACHED NAV =========================================
+
+	&.nav--detached .page-header {
+		position: fixed;
+		top: 0;
+		z-index: 10;
+	}
+	&.nav--hidden .page-header {
+		transform: translateY( -7rem );
+	}
+
+} 
+
+@include respond-min( $mq-small ) {
+
+	.page-header__inner {
+		float: left;
+		padding: 1rem 0;
+	}
+
+	.nav--main {
+		float: right;
+	}
+	.nav--main .nav__list {
+		padding: 0;
+	}
+	.nav--main .nav__item {
+		display: inline-block;
+
+		&:last-child {
+			.main-nav__link {
+				padding-right: 0;
+			}
+		}
+	}
+	.nav--main .nav__link {
+		padding: 2rem 1.5rem;
+	}
+
+	//= JS ===================================================
+
+	.js {
+
+		.toggle--nav--main {
+			display: none;
+		}
+
+		.nav--main {
+			float: right;
+			opacity: 1;
+			position: static;
+			transform: translateY( 0 );
+			visibility: visible;
+			width: auto;
+		}
+		.nav--main .nav__link {
+			padding: 2rem 1.5rem;
+		}
+	}
+
+}
+*/
 @media only screen and (min-width: 37.5em) {
   .wrap--site {
     padding-left: 2rem;
@@ -947,6 +1250,104 @@ th {
   }
   .wrap-image--large {
     margin: 8rem 0;
+  }
+  .page-header {
+    text-align: left;
+  }
+  .page-header:before, .page-header:after {
+    content: "";
+    display: table;
+  }
+  .page-header:after {
+    clear: both;
+  }
+
+  .page-header__inner {
+    padding: 0 2rem;
+  }
+
+  .page-header__logo {
+    float: left;
+    padding-left: 0;
+  }
+
+  .page-header__toggle {
+    display: none;
+  }
+
+  .main-nav {
+    display: block;
+    float: left;
+  }
+  .main-nav--detached {
+    display: block;
+    float: right;
+  }
+
+  .main-nav__link {
+    float: left;
+    padding: 2rem;
+  }
+  .main-nav__link--cta {
+    border-radius: 0.4rem;
+    margin: 1rem 0 1rem 1rem;
+    padding: 1rem 2rem;
+  }
+  .main-nav__link--mobile {
+    display: none;
+  }
+  .main-nav__link [class^="icon-"] {
+    float: none;
+  }
+
+  .main-nav__search {
+    position: relative;
+    -webkit-transition: background 0.3s, width 0.3s;
+    transition: background 0.3s, width 0.3s;
+  }
+
+  .main-nav__search__form {
+    display: inline-block;
+  }
+
+  .main-nav__search__input {
+    background: none;
+    border: none;
+    color: white;
+    margin: 0;
+    padding: 2rem 4.8rem 2rem 2rem;
+    width: 100%;
+  }
+
+  .main-nav__search__button {
+    color: white;
+    display: inline-block;
+    padding: 2rem 2.6rem 2rem 2.7rem;
+    position: absolute;
+    right: 0;
+    top: 0;
+    -webkit-transition: background 0.3s, color 0.3s;
+    transition: background 0.3s, color 0.3s;
+  }
+  .main-nav__search__button:hover {
+    background: #242424;
+    color: #f05d71;
+  }
+
+  .no-js .main-nav__search {
+    background: #242424;
+  }
+
+  .js .main-nav__search {
+    width: 4.8rem;
+  }
+  .js.search--open .main-nav__search {
+    background: #242424;
+    width: 26.5rem;
+  }
+  .js.search--open .main-nav__search__button .icon--search:before {
+    content: '\e012';
+    font-size: 1.6rem;
   }
   .foo {
     color: #f00;
