--- a/assets/sass/modules/nav.scss
+++ b/assets/sass/modules/nav.scss
@@ -1,17 +1,8 @@
-// ===========================================================
-//
-//	$NAV
-//
-// ===========================================================
+/* ===========================================================
 
-.hide-text {
-	left: -100%;
-	overflow: hidden;
-	position: absolute;
-	top: -100%;
-}
+	#NAV
 
-
+=========================================================== */
 
 //= PAGE HEADER ==============================================
 
